--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "nest-winston": "^1.9.7",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.14.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
