--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.4.1",
+    "brotli": "^1.3.3",
+    "compression": "^1.7.4",
+    "fastify": "^4.28.1",
     "nest-winston": "^1.9.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
